// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Update statement generates statements: changes 1`] = `
Map {
  "Article" => Map {
    "update" => 2,
  },
  "ArticleTagModeration" => Map {
    "deletion" => 2,
  },
  "ArticleTag" => Map {
    "deletion" => 3,
  },
}
`;

exports[`Update statement generates statements: changes 2`] = `
Map {
  "Article" => Map {
    "update" => 2,
  },
  "ArticleTag" => Map {
    "creation" => 2,
  },
}
`;

exports[`Update statement generates statements: changes 3`] = `
Map {
  "ArticleTag" => Map {
    "creation" => 2,
  },
}
`;

exports[`Update statement generates statements: result 1`] = `
[
  {
    "score": 0,
    "status": "deleted",
    "tags": [],
    "title": "My first published article",
  },
  {
    "score": 0,
    "status": "deleted",
    "tags": [],
    "title": "My second published article",
  },
]
`;

exports[`Update statement generates statements: result 2`] = `
[
  {
    "score": 1,
    "status": "published",
    "tags": [
      {
        "order": 0,
        "tag": {
          "title": "fashion",
        },
      },
    ],
    "title": "My first draft article",
  },
  {
    "score": 1,
    "status": "published",
    "tags": [
      {
        "order": 0,
        "tag": {
          "title": "fashion",
        },
      },
    ],
    "title": "My second draft article",
  },
]
`;

exports[`Update statement generates statements: result 3`] = `
[
  {
    "score": 1,
    "status": "published",
    "tags": [
      {
        "order": 0,
        "tag": {
          "title": "fashion",
        },
      },
      {
        "order": 1,
        "tag": {
          "title": "high-tech",
        },
      },
    ],
    "title": "My first draft article",
  },
  {
    "score": 1,
    "status": "published",
    "tags": [
      {
        "order": 0,
        "tag": {
          "title": "fashion",
        },
      },
      {
        "order": 1,
        "tag": {
          "title": "high-tech",
        },
      },
    ],
    "title": "My second draft article",
  },
]
`;
